# sample-rust-service

./: Cargo.toml  README.md  build.ps1  install.ps1  query-service.ps1  queryex-service.ps1  start-service.ps1  stop-service.ps1  uninstall.ps1
crates/diagnostic/: Cargo.toml
crates/my-business/: Cargo.toml  run_example.ps1
crates/my-business/examples/: debug.rs
crates/my-business/src/: lib.rs  my_application.rs
crates/sample-rust-service/: Cargo.toml
crates/sample-rust-service-core/: Cargo.toml
crates/sample-rust-service-core/src/: application.rs  diagnostic.rs  lib.rs  win_dbg_logger.rs
crates/sample-rust-service/src/: diagnostic.rs  main.rs  service_wrapper.rs
crates/windows-service-rs-core/: Cargo.toml
crates/windows-service-rs-core/src/: error.rs  lib.rs
dependencies/windows-service-rs-core/: Cargo.toml
dependencies/windows-service-rs-core/src/: application.rs  lib.rs  service_wrapper.rs
installer/service-installer/: Cargo.toml
installer/service-installer/src/: action_type.rs  arguments.rs  diagnostic.rs  error.rs  installer.rs  main.rs  service_wrapper.rs
installer/service-installer/src/features/: common.rs  feature_factory.rs  feature_traits.rs  features.rs  install_service.rs  mod.rs  query_service.rs  service_wrapper.rs  start_service.rs  stop_service.rs  uninstall_service.rs
src/: main.rs
