[package]
name = "my-business"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-service-rs-core= { path = "../../dependencies/windows-service-rs-core" }
log = "0.4.14"

[dev-dependencies]
simple_logger = "1.13.0"
