[package]
name = "sample-rust-service"
version = "0.1.0"
edition = "2018"

[dependencies]
windows-service="0.4.0"
widestring = "0.4.3"
windows-service-rs-core= { path = "../windows-service-rs-core" }
my-business= { path = "../my-business" }
log = {version = "0.4.14", features=["max_level_debug", "release_max_level_warn"] }
simple_logger = "1.13.0"

[dependencies.winapi]
version = "0.3.9"
default-features = true
features = ["debugapi"]
