[package]
name = "sample-rust-service"
version = "0.1.0"
edition = "2018"

[dependencies]
windows-service-rs-core= { path = "../../dependencies/windows-service-rs-core" }
my-business= { path = "../my-business" }
log = {version = "0.4.14", features=["max_level_debug", "release_max_level_warn"] }
simple_logger = "1.13.0"

