[package]
name = "windows-service-rs-core"
version = "0.1.0"
description = "A library that wraps Windows Service core processes. You can easily build multi-task Windows Service using this library."
readme = "README.md"
authors = ["Liu Xia", "Gao Yuxia"]
keywords = ["windows", "service"]
categories = ["os::windows-apis"]
edition = "2018"

[dependencies]
windows-service="0.4.0"
widestring = "0.4.3"
log = "0.4.14"
winapi = {version = "0.3.9", default-features = true, features = ["debugapi"]}
